test/functions/jplevyak/intent-5-error.good
Error: Assigning to a constant expression (intent-5-error.chpl:4)
